--- a/src/NuSearch.Web/packages.config
+++ b/src/NuSearch.Web/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Elasticsearch.Net" version="2.0.0-alpha1" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="2.0.0-rc1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
@@ -8,8 +8,8 @@
   <package id="Nancy.Owin" version="1.1" targetFramework="net45" />
   <package id="Nancy.Serialization.JsonNet" version="1.1" targetFramework="net45" />
   <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
-  <package id="NEST" version="2.0.0-alpha1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="NEST" version="2.0.0-rc1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Nowin" version="0.15.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Serilog" version="1.5.14" targetFramework="net45" />
